Adding shadow to navbar

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5828,4 +5828,7 @@ td.visible-print {
     display: none !important;
   }
 }
+.navbar-shadow {
+  box-shadow: 0 10px 6px -6px #777;
+}
 /*# sourceMappingURL=bootstrap.css.map */
